<resources>
    <string name="app_name">Administrador de Contraseñas</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title">Administrador de Contraseñas</string>
    <string name="add_website">Add new note</string>

    <string name="error_label">An error has occurred!</string>
    <string name="error_description_if_empty">The data cannot be empty.</string>

    <string name="login">Login</string>
    <string name="user">User...</string>
    <string name="password">Password...</string>
    <string name="email">Email...</string>
    <string name="name">Name...</string>
    <string name="email...">Email</string>
    <string name="name...">User</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_gen">Generate</string>
    <string name="btn_add">Add</string>
    <string name="btn_galery">Open Galery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="selectIcon">Icon</string>
    <string name="url">Website URL...</string>

    <string name="optional">⬇ Optional if you want to add an app instead of a website.</string>
    <string name="psw_gen">Password Generator</string>
    <string name="psw_new">New password...</string>
    <string name="length">Length</string>
    <string name="a_z">Contains letters from a-z</string>
    <string name="A_Z">Contains letters from A-Z</string>
    <string name="zero_nine">Contains numbers from 0-9</string>
    <string name="special_characters">Contains special characters</string>
    <string name="exclude">Exclude similar characters</string>
</resources>