<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/almost_dark_blue"
    tools:context=".FirstFragment"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/semi_dark_blue"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:elevation="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        android:layout_marginTop="26dp"
        android:textSize="18sp"
        />

    <View
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/very_light_blue"
        android:background="@drawable/rounded_corners"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="80dp"
        android:elevation="5dp"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        app:layout_constraintCircleRadius="20dp"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            style="@style/buttons_two"
            />

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_add"
            style="@style/buttons_two"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>